--- a/src/components/Cover.css
+++ b/src/components/Cover.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .video {
   object-fit: cover;
   width: 100%;
@@ -15,12 +16,27 @@
   position: absolute;
   z-index: -1;
 }
+
 .cover-container > h1 {
   color: white;
   font-size: 100px;
 }
+
 .cover-container > p {
   margin-top: 8px;
   color: white;
   font-size: 32px;
+}
+
+@media screen and (max-width: 960px) {
+  .cover-container > h1 {
+    font-size: 70px;
+    text-align: center;
+  }
+
+  .cover-container > p {
+    text-align: center;
+    font-size: 22px;
+    width: 85%;
+  }
 }
